--- a/POC/frontend/public/index.html
+++ b/POC/frontend/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Data Pura Vida</title>
-    <script src="https://unpkg.com/amazon-quicksight-embedding-sdk@1.0.0/dist/quicksight-embedding-js-sdk.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
